Fixed the left and right movement and added a jump function. It had alot of bugs that I slowely worked out. I still need to fine tune it but i'm currently working on making it responsive to changes in the y value of the platform underneath it.

--- a/style.css
+++ b/style.css
@@ -2,20 +2,34 @@
 body {
 	padding: 0px;
 	margin: 0px;
+	width: 5000px;
+	overflow: hidden;
 }
 
 .con {
 	position: absolute;
-	width: 100%;
+	width: 5000px;
 	height: 200px;
 	overflow: hidden;
 	bottom: 0px;
 }
 
 .base {
-	
+	display: inline-block;
 	height: 200px;
-	width: 5000px;
+	width: 600px;
+	background-color: blue;
+}
+
+.hole {
+	width: 200px;
+	display: inline-block;
+}
+
+.base2 {
+	display: inline-block;
+	width: 800px;
+	height: 200px;
 	background-color: blue;
 }
 
@@ -25,8 +39,6 @@ body {
 	width: 50px;
 	background-color: green;
 	bottom: 200px;
-	
-
 }
 .button {
 	width: 50px;
